# crabvpx

./: .gitignore  BORROW.md  CONTRIBUTING.md  Cargo.toml  DETANGLE.md  INSTRUCTIONS.md  LICENSE  Makefile  PATENTS  PROVENANCE.md  README.md  THRASH.md  THREAD.md  build.rs  build.sh  justfile  run_harness.sh
.github/workflows/: ci.yml
benches/: decode.rs  kernels.rs
docs/: C2RUST_LEARNINGS.md  COMPLEXITY_ANALYSIS.md  neon-optimization-log.md  refactor_plan.md  simd-architecture.md
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: decode_frame.rs  decode_ivf.rs
fuzz/oss-fuzz/: Dockerfile  build.sh  project.yaml
harness/: Cargo.toml  build.rs
harness/src/: decoder.rs  ivf.rs  lib.rs  main.rs
harness/tests/: differential.rs
safety/: COMPLETED_WORK_ITEMS.md  HINTS.md  architecture_overview.md  bitstream_thrashing_mitigation_strategy.md  bitstream_validation_strategy.md  borrow_checker_decoupling_strategy.md  frame_memory_management.md  multithreaded_safety_strategy.md  pattern_mapping.md  remaining_refactoring_work_items.md  struct_deduplication_strategy.md  top_level_struct_decoupling_strategy.md  zero_unsafe_strategy.md
scratch/: compare_logs.py  count_details.py  count_in_scope_unsafe.py  test_default.rs
scripts/: analyze_complexity.py  analyze_complexity.sh  benchmark.py  bisect.py  compare.py  count_unsafe.sh  run_harness.py
src/: api.rs  lib.rs  simd_shim.rs  thread_shim.rs  vp8_rtcd.h  vpx_config.h  vpx_config.rs  vpx_dsp_rtcd.h
test_data/: README.md  vp80-06-smallsize.ivf  vp80-06-smallsize.ivf.md5
tests/: bool_decoder_test.rs  decode_smoke.rs  differential_md5.rs  mt_equivalence.rs
(+86 files in other folders)
