[package]
name = "crabvpx"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "A memory-safe, pure-Rust VP8 video decoder (bit-exact with libvpx)."
license = "BSD-3-Clause"
repository = "https://github.com/ubercodec/crabvpx"
readme = "README.md"
keywords = ["vp8", "video", "decoder", "codec", "webm"]
categories = ["multimedia::video", "multimedia::encoding"]

[dependencies]
md5 = "0.7"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "decode"
harness = false

[[bench]]
name = "kernels"
harness = false
