[package]
name = "harness"
version = "0.1.0"
edition = "2024"

[features]
default = ["oracle"]
oracle = []
rust = ["dep:crabvpx"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
indicatif = "0.17"
crabvpx = { path = "../", optional = true }
md5 = "0.7"
bindgen = "0.72.1"

[build-dependencies]
bindgen = "0.71"
